2014-08-13 MickeM
 * Fixed installer issues
 * Added firewall exception as a separate component

2014-08-12 MickeM
 * Reworked the dot-net API
   Now actually works and is much much improved.
 * Change the dotnetplugin.dll name to NSCP.Core.dll
 * Removed all "helpers" from the API and added a separate NSCP.Helpers.dll
 * All C# code is now built using cmake
 * CSharpSample plugin is now included in cmake build
 * Added protobuf_net and a compiled proto file to NSCP.Protobuf.dll
 * Much bugfixing and tweaks and changes to dot-net plugin
 * Change the directory structure of various components to make things easier to find
 * Cleaned up the cmake build a bit
 * Removed some old stale artifacts
 * Changed name of nscapi_plugin_interface.hpp to nscapi_helper_singleton.hpp to better reflect what it is
 * Fixed build on apple osx

2014-08-01 MickeM
 * Major refactoring of json handling
   now uses exact same messages as protobuf (compiled from protobuf)
 * Added json-protobuf (library to compile protobuf to json spirit)
 * Added help-pb to get help as protobuf from commands
 * Removed help-csv since help-pb is better (and built-in to inventory)
 * Clenaedup protobuf file and removed some unesseceary fields.
 * migrated "test" client into a separate moduile (CommandClient)
 * greatly extended the client interfaces (both web and console) to have new and improved commands

2014-07-19 MickeM
 * Extensive additions to the WEB UI
 * Console can be used much like nscp tesat
 * Log view is enhaned
 * Modules view added

2014-07-14 MickeM
 * Fixed so all files are copied for WebServer

2014-07-13 MickeM
 * Improved reload handling.
   Plugins are now reloaded and if they support reload messages can do whatever they want.
 * Added retry command line option to clients
 * Unwrapped the macros from plugins.?pp
 * Added error messages when saving HTTP settings

2014-07-10 MickeM
 * Changed so plugin generator uses jinja (instead of strings)

2014-07-10 MickeM