@@ -19,7 +19,7 @@
 *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
 ***************************************************************************/
 
-#include <Sddl.h>
+//#include <Sddl.h>
 
 #include <boost/foreach.hpp>
 #include <boost/program_options.hpp>
